--- a/index.html
+++ b/index.html
@@ -561,12 +561,13 @@
             box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
             z-index: 1000;
             transition: right 0.4s ease;
-            display: flex;
+            display: none;
             flex-direction: column;
         }
 
         .cart-preview.active {
             right: 0;
+            display: block;
         }
 
         .cart-header {
