--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#D35400" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#E67E22" media="(prefers-color-scheme: dark)">
-    <meta name="theme-color" content="#FF7700">
-    <meta name="msapplication-navbutton-color" content="#FF7700"> <!-- For legacy Edge/IE -->
+    <meta name="theme-color" content="#D35400">
+    <meta name="msapplication-navbutton-color" content="#D35400"> <!-- For legacy Edge/IE -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- For iOS Safari -->
     <title>FarmCommerce Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
