--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
             --shadow-lg: 0 20px 25px rgba(0,0,0,0.15);
             --border-radius: 16px;
             --border-radius-sm: 8px;
-            --glass-bg: rgba(255, 255, 255, 0.08);
+            --glass-bg: rgba(223, 209, 209, 0.884);
             --glass-border: rgba(255, 255, 255, 0.18);
         }
 
@@ -885,7 +885,7 @@
     }
 
     .toggle-bg {
-        display: none; /* Optional: hide animated background if it overlaps */
+        display: none; 
     }
 
     .btn {
@@ -976,6 +976,31 @@
     .welcome-section {
         display: none !important;
     }
+}
+@media (max-width: 400px) {
+  .toggle-btn {
+    padding: 8px 4px;
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 768px) {
+  .form-toggle {
+    margin-bottom: 20px; /* Reduced spacing */
+    padding: 3px; /* Thinner padding */
+  }
+
+  .toggle-btn {
+    padding: 10px 8px; /* Adjusted vertical/horizontal padding */
+    font-size: 0.85rem; /* Slightly smaller text */
+    font-weight: 500; /* Medium weight for better readability */
+  }
+
+  .toggle-bg {
+    top: 3px;
+    left: 3px;
+    width: calc(50% - 3px); /* Adjusted position values */
+    height: calc(100% - 6px);
+  }
 }
 
     </style>
