--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 -1px 0px 0.5px rgba(0,0,0,0.05);
             background: 
                 linear-gradient(135deg, 
-                rgba(255,255,255,0.92) 0%, 
-                rgba(250,250,250,0.92) 100%);
+                rgba(20, 2, 2, 0.92) 0%, 
+                rgba(150, 141, 141, 0.92) 100%);
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
