--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             /* ===== UI ELEMENTS ===== */
             --border: #e2e8f0;
             --shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-            --theme-color: #FF7700;
+            /* --theme-color: #FF7700; */
         }
         
 
@@ -82,7 +82,7 @@
         }
         }
         body {
-            background-color: var(--theme-color);
+            background-color: var(--page-bg);
             min-height: 100vh;
             display: flex;
             color: var(--text-dark);
