--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#FF7700" media="(prefers-color-scheme: light)">
     <meta name="theme-color" content="#60a5fa" media="(prefers-color-scheme: dark)">
-    <!-- <meta name="theme-color" content="#FF7700"> -->
+    <meta name="theme-color" content="#FF7700">
     <meta name="msapplication-navbutton-color" content="#FF7700">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>FarmCommerce Dashboard</title>
@@ -1134,13 +1134,13 @@
             }
         }
         
-        @media (prefers-color-scheme: light) {
+        /* @media (prefers-color-scheme: light) {
             body { background-color: #FF7700; }
         }
 
         @media (prefers-color-scheme: dark) {
-            body { background-color: #E67E22; }
-        }
+            body { background-color: #E67E22; } */
+        /* } */
     </style>
 </head>
 <body>
